--- a/doc/html/main.html.in
+++ b/doc/html/main.html.in
@@ -11,20 +11,61 @@
 
 HPP (Humanoid Path Planner) is a collection of software packages
 implementing path planning functionalities for a humanoid robot.
-HPP is built upon KineoWorks (KWS) and KineoPathPlanner-SDK (KPP-SDK). 
+Global motion planning algorithms are built upon KineoWorks (KWS) and
+KineoPathPlanner-SDK (KPP-SDK), commercial software products marketed
+by <a href="http://www.kineocam.com">Kineo CAM</a>.
+<p>
+However, many basic software modules (dynamic model, walk pattern generator,...)
+are independent of the above commercial products. 
 
 It can be extended to path planning for other types of robots like digital actors for instance.
 
+
 <h2> Organization of the packages </h2>
 
-The code relative to the HPP is distributed into several software packages. The packages are distributed into three 
-categories:
+The code relative to HPP is distributed into several software packages handled by 
+<a href="http://www.gnu.org/software/autoconf">autotools</a>. 
+The packages are distributed into the following categories:
 <ul>
 <li> <a href="algorithm.html">Algorithms</a> implementing path planning functionalities </li>
-<li> <a href="corba.html">Corba</a> communication facilities to control the algorithms </li>
+<li> <a href="corba.html">Corba</a> communication facilities to control algorithms </li>
 <li> <a href="kppInterface.html">Add-on</a> to KineoPathPlanner GUI interface. </li>
-<li> <a href="roboticComponent.html">Robotic components</a> including HPP algorithms</li>
+<li> <a href="roboticComponent.html">Robotic components</a> encapsulating HPP algorithms</li>
 </ul>
+
+<h2>A few examples</h2>
+
+Here are a few examples of problems solved by HPP packages.
+
+<h3>Whole-body motion generation</h3>
+
+This problem consists in computing a dynamically stable motion a humanoid robot 
+in order to perform specified geometric tasks like moving the right hand at a given
+position, looking in a given direction for instance.
+<p>
+<center>
+<a href="movies/whole-body.mpg"><img src="pictures/film.png" width="40%"> </a>
+</center>
+
+<h3>Passing under obstacles</h3>
+
+Passing under a low obstacle is a difficult task for a humanoid robot.
+The robot should use all degrees-of-freedom while keeping quasi-static 
+balance.
+
+<p>
+<center>
+<a href="movies/passing-under.mpg"><img src="pictures/film.png" width="40%"> </a>
+</center>
+
+<h3>Walk planning</h3>
+
+To move on a flat ground cluttered with obstacles, the best strategy is to walk. In this example, we plan a motion for the bounding box of the robot with cart-like kinematics and then animate the path of the box using a walk pattern generator.
+
+<p>
+<center>
+<img src="pictures/film.png" width="40%">
+</center>
 
  <hr>
  <center>
