Added link to package hppWalkFootPlanner.

--- a/configure.ac
+++ b/configure.ac
@@ -45,6 +45,7 @@ PKG_CHKADDDPD(HPPCORE,			hppCore)
 PKG_CHKADDDPD(WALKGENJRL,		walkGenJrl)
 PKG_CHKADDDPD(HPPCORBASERVER,		hppCorbaServer)
 PKG_CHKADDDPD(HPPPYTHON,		hppPython)
+PKG_CHKADDDPD(HPPWALKFOOTPLANNER,	hppWalkFootPlanner)
 PKG_CHKADDDPD(HPPWALKPLANNER,		hppWalkPlanner)
 PKG_CHKADDDPD(HPPHRPPLANNER, 		hppHRPPlanner)
 PKG_CHKADDDPD(HPPCMPPLANNER, 		hppCmpPlanner)
