--- a/configure.ac
+++ b/configure.ac
@@ -64,7 +64,7 @@ PKG_CHKADDDPD(KPPINTERFACETUTORIAL, 	kppInterfaceTutorial)
 PKG_CHKADDDPD(HPPOPENHRP, 		hppOpenHRP)
 PKG_CHKADDDPD(HPPVISUALIZEMOVEPLANNER,	hppVisualizeMovePlanner)
 PKG_CHKADDDPD(SLAM3DPLANNER,		slam3DPlanner)
-PKG_CHKADDDPD(HPPENVGENERATOR,		hppEnvGenerator)
+PKG_CHKADDDPD(HPPDYNAMICOBSTACLE,	hppDynamicObstacle)
 PKG_CHKADDDPD(WORLDMODELGRID3D,		worldModelGrid3D)
 PKG_CHKADDDPD(HRP2DYNAMICS,		hrp2Dynamics)
 PKG_CHKADDDPD(HPPWALKPLANNERCOMPSPEC,	hppWalkPlannerCompSpec)
