Added link to hppHybridRobot package.

--- a/configure.ac
+++ b/configure.ac
@@ -47,6 +47,7 @@ PKG_CHKADDDPD(HPPCORBASERVER,		hppCorbaServer)
 PKG_CHKADDDPD(HPPPYTHON,		hppPython)
 PKG_CHKADDDPD(HPPWALKFOOTPLANNER,	hppWalkFootPlanner)
 PKG_CHKADDDPD(HPPWALKPLANNER,		hppWalkPlanner)
+PKG_CHKADDDPD(HPPHYBRIDROBOT, 		hppHybridRobot)
 PKG_CHKADDDPD(HPPHRPPLANNER, 		hppHRPPlanner)
 PKG_CHKADDDPD(HPPCMPPLANNER, 		hppCmpPlanner)
 PKG_CHKADDDPD(HPPTUTORIALPLANNER, 	hppTutorialPlanner)
@@ -56,6 +57,7 @@ PKG_CHKADDDPD(KPPINTERFACEHRP, 		kppInterfaceHRP)
 PKG_CHKADDDPD(KPPINTERFACECMP, 		kppInterfaceCmp)
 PKG_CHKADDDPD(HPPGIK, 			hppGik)
 PKG_CHKADDDPD(HPPLOA, 			hppLoa)
+PKG_CHKADDDPD(HPPLOAPLANNER,		hppLoaPlanner)
 PKG_CHKADDDPD(HPPTIMINGPLANNER, 	hppTimingPlanner)
 PKG_CHKADDDPD(DYNAMICSJRLJAPAN,		dynamicsJRLJapan)
 PKG_CHKADDDPD(ABSTRACTROBOTDYNAMICS, 	abstractRobotDynamics)
