--- a/doc/html/algorithm.html.in
+++ b/doc/html/algorithm.html.in
@@ -10,12 +10,12 @@
 <h3>Algorithms dealing with dynamics</h3>
 
 <table>
-  <tr><td width="20"></td><td><a href="@ABSTRACTROBOTDYNAMICS_DOCDIR@/main.html">abstractRobotDynamics</a>: </td><td> abstract interface for robot dynamic model</td></tr>
-  <tr><td width="20"></td><td><a href="@DYNAMICSJRLJAPAN_DOCDIR@/main.html">dynamicsJRLJapan</a>: </td><td> JRL Implementation of robot dynamic model</td></tr>
-  <tr><td width="20"></td><td><a href="@WALKGENJRL_DOCDIR@/main.html">walkGenJRL</a>: </td><td> JRL Walk Pattern Generator</td></tr>
-  <tr><td width="20"></td><td><a href="@ABSTRACTGIKTASK_DOCDIR@/main.html">abstractGikTask</a>: </td><td> Abstract interface for whole body motion planning.</td></tr>
-  <tr><td width="20"></td><td><a href="@HPPGIK_DOCDIR@/main.html">hppGik</a>: </td><td> Implementation of whole body motion planning.</td></tr>
-  <tr><td width="20"></td><td><a href="@HRP2DYNAMICS_DOCDIR@/main.html">hrp2Dynamics</a>: </td><td> Optimized dynamic model for HRP2.</td></tr>
+  <tr><td width="20"></td><td><a href="@ABSTRACTROBOTDYNAMICS_DOCDIR@/html/main.html">abstractRobotDynamics</a>: </td><td> abstract interface for robot dynamic model</td></tr>
+  <tr><td width="20"></td><td><a href="@DYNAMICSJRLJAPAN_DOCDIR@/html/main.html">dynamicsJRLJapan</a>: </td><td> JRL Implementation of robot dynamic model</td></tr>
+  <tr><td width="20"></td><td><a href="@WALKGENJRL_DOCDIR@/html/main.html">walkGenJRL</a>: </td><td> JRL Walk Pattern Generator</td></tr>
+  <tr><td width="20"></td><td><a href="@ABSTRACTGIKTASK_DOCDIR@/html/main.html">abstractGikTask</a>: </td><td> Abstract interface for whole body motion planning.</td></tr>
+  <tr><td width="20"></td><td><a href="@HPPGIK_DOCDIR@/html/main.html">hppGik</a>: </td><td> Implementation of whole body motion planning.</td></tr>
+  <tr><td width="20"></td><td><a href="@HRP2DYNAMICS_DOCDIR@/html/main.html">hrp2Dynamics</a>: </td><td> Optimized dynamic model for HRP2.</td></tr>
 </table>
 
 <h3>Motion planning for humanoid system algorithms</h3>
@@ -25,16 +25,16 @@ Packages marked by (<--kpp-sdk) are build upon KineoPathPlanner-SDK.
   <li><b>General functionalities</b></li>
       <table>
 	  <tr><td width="20"></td><td><a href="@KWSPLUS_DOCDIR@/main.html">kwsPlus</a>: </td><td> extension to KineoWorks (cart-like steering method) </td><td> (<--kpp-sdk).</td></tr>
-	<tr><td width="20"></td><td><a href="@HPPMODEL_DOCDIR@/main.html">hppModel</a>: </td><td> implementation of hybrid geometric and dynamic robot. </td><td> (<--kpp-sdk)</td></tr>
-	<tr><td width="20"></td><td><a href="@HPPCORE_DOCDIR@/main.html">hppCore</a>: </td><td> definition of basic classes. </td><td> (<--kpp-sdk) </td></tr>
+	<tr><td width="20"></td><td><a href="@HPPMODEL_DOCDIR@/html/main.html">hppModel</a>: </td><td> implementation of hybrid geometric and dynamic robot. </td><td> (<--kpp-sdk)</td></tr>
+	<tr><td width="20"></td><td><a href="@HPPCORE_DOCDIR@/html/main.html">hppCore</a>: </td><td> definition of basic classes. </td><td> (<--kpp-sdk) </td></tr>
 	</table>
   <li><b>Path Planning for humanoid robots</b></li>
   <table>
     <tr><td width="20"></td><td><a href="@HPPHYBRIDROBOT_DOCDIR@/main.html">hppHybridRobot</a>: </td><td> Hybrid model of robot to combine various types of motions in roadmap based path planning. </td><td> (<--kpp-sdk)</td></tr>
     <tr><td width="20"></td><td><a href="@HPPHRPPLANNER_DOCDIR@/main.html">hppHRPPlanner</a>: </td><td> Algorithms to plan motion going under an obstacle. </td><td> (<--kpp-sdk)</td></tr>
     <tr><td width="20"></td><td><a href="@HPPCMPPLANNER_DOCDIR@/main.html">hppCmpPlanner</a>: </td><td> Contact motion planning. </td><td> (<--kpp-sdk)</td></tr>
-    <tr><td width="20"></td><td><a href="@HPPWALKFOOTPLANNER_DOCDIR@/main.html">hppWalkFootPlanner</a>: </td><td>Foot step planning along a bounding box trajectory. </td><td> (<--kpp-sdk)</td></tr>
-    <tr><td width="20"></td><td><a href="@HPPWALKPLANNER_DOCDIR@/main.html">hppWalkPlanner</a>: </td><td> Walk planning for a humanoid robot among obstacles. </td><td> (<--kpp-sdk)</td></tr>
+    <tr><td width="20"></td><td><a href="@HPPWALKFOOTPLANNER_DOCDIR@/html/main.html">hppWalkFootPlanner</a>: </td><td>Foot step planning along a bounding box trajectory. </td><td> (<--kpp-sdk)</td></tr>
+    <tr><td width="20"></td><td><a href="@HPPWALKPLANNER_DOCDIR@/html/main.html">hppWalkPlanner</a>: </td><td> Walk planning for a humanoid robot among obstacles. </td><td> (<--kpp-sdk)</td></tr>
     <tr><td width="20"></td><td><a href="@HPPLOA_DOCDIR@/main.html">hppLoa</a>: </td><td> Whole body motion planning with local obstacle avoidance. </td><td>(<--kpp-sdk) </td></tr>
     <tr><td width="20"></td><td><a href="@HPPLOAPLANNER_DOCDIR@/main.html">hppLoaPlanner</a>: </td><td> Global motion planning based on local obstacle avoidance. </td><td>(<--kpp-sdk) </td></tr>
     <tr><td width="20"></td><td><a href="@HPPTIMINGPLANNER_DOCDIR@/main.html">hppTimingPlanner</a>: </td><td> Dynamic time parameterization of quasi-static paths. </td><td>(<--kpp-sdk) </td></tr>
