--- a/doc/html/algorithm.html.in
+++ b/doc/html/algorithm.html.in
@@ -32,7 +32,7 @@ Packages marked by (<--kpp-sdk) are build upon KineoPathPlanner-SDK.
   <table>
     <tr><td width="20"></td><td><a href="@HPPHYBRIDROBOT_DOCDIR@/main.html">hppHybridRobot</a>: </td><td> Hybrid model of robot to combine various types of motions in roadmap based path planning. </td><td> (<--kpp-sdk)</td></tr>
     <tr><td width="20"></td><td><a href="@HPPHRPPLANNER_DOCDIR@/main.html">hppHRPPlanner</a>: </td><td> Algorithms to plan motion going under an obstacle. </td><td> (<--kpp-sdk)</td></tr>
-    <tr><td width="20"></td><td><a href="@HPPCMPPLANNER_DOCDIR@/main.html">hppCmpPlanner</a>: </td><td> Contact motion planning. </td><td> (<--kpp-sdk)</td></tr>
+    <tr><td width="20"></td><td><a href="@HPPCMPPLANNER_DOCDIR@/html/main.html">hppCmpPlanner</a>: </td><td> Contact motion planning. </td><td> (<--kpp-sdk)</td></tr>
     <tr><td width="20"></td><td><a href="@HPPWALKFOOTPLANNER_DOCDIR@/html/main.html">hppWalkFootPlanner</a>: </td><td>Foot step planning along a bounding box trajectory. </td><td> (<--kpp-sdk)</td></tr>
     <tr><td width="20"></td><td><a href="@HPPWALKPLANNER_DOCDIR@/html/main.html">hppWalkPlanner</a>: </td><td> Walk planning for a humanoid robot among obstacles. </td><td> (<--kpp-sdk)</td></tr>
     <tr><td width="20"></td><td><a href="@HPPLOA_DOCDIR@/main.html">hppLoa</a>: </td><td> Whole body motion planning with local obstacle avoidance. </td><td>(<--kpp-sdk) </td></tr>
