Added link to liboptimization.

--- a/configure.ac
+++ b/configure.ac
@@ -72,6 +72,7 @@ PKG_CHKADDDPD(HRP2DYNAMICS,		hrp2Dynamics)
 PKG_CHKADDDPD(HPPWALKPLANNERCOMPSPEC,	hppWalkPlannerCompSpec)
 PKG_CHKADDDPD(WALKPLANNERORTM,		walkPlannerOrtm)
 PKG_CHKADDDPD(WALKPLANNERORTMCLIENT,	walkPlannerOrtmClient)
+PKG_CHKADDDPD(LIBOPTIMIZATION,		liboptimization)
 
 PKG_CHKADDDPD(WALKGENOM,		walk-genom, walk)
 
