Add graph of dependencies between packages.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,8 @@
-# 
-#  Copyright 
-# 
+#
+#  Copyright 2008
+#      IS/AIST-ST2I/CNRS Joint Japanese-French Robotics Laboratory (JRL).
+# All rights reserved.
+#
 
 SUBDIRS = \
 	doc
